--- a/cv.css
+++ b/cv.css
@@ -2,6 +2,7 @@
 /* CSS Document */
 
 .capt {
+	vertical-align: top;
 	background-color: #E5F1FB;
 	border: none;
 	font: normal 16px/1 Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
@@ -11,3 +12,18 @@
 	border:none;
 	font:normal 16px/1 Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
 }
+
+.colWdth {
+	-webkit-column-width: 100px; /* Chrome, Safari, Opera */
+    -moz-column-width: 100px; /* Firefox */
+    column-width: 100px;
+}
+
+.developer{
+	line-height: 1;
+	font-weight: normal;
+	font-variant: normal;
+	font-style: normal;
+	font-size: 17px;
+	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;	
+	}
